<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ixblue_ins_msgs</name>
  <version>0.1.5</version>
  <description>The ixblue INS defined messages package</description>

  <maintainer email="adrien.barral@ixblue.com">Adrien BARRAL</maintainer>
  <maintainer email="romain.reignier@ixblue.com">Romain REIGNIER</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ixblue_ins_msgs</url>

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author>
  <author email="laure.le-breton@ixblue.com">Laure LE BRETON</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
